# projectS2

./: .gitignore  CMakeLists.txt  README.md
include/: EdgeDetection.h  InputParser.h  LineDetection.h
src/: EdgeDetection.cpp  InputParser.cpp  LineDetection.cpp  main.cpp
